--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -4668,6 +4668,195 @@ Hilbertraum wird mit Hilfe des Satzes von der Orthogonalprojektion bewiesen.
   \end{proof}
 \end{satz}
 
+%Vorlesung vom 24.5.2012
+%satz v.2.6
+\begin{satz}
+  Sei $H$ ein Hilbertraum. Dann ist $H'$ ebenfalls ein Hilbertraum und $H$ ist
+  reflexiv.
+  \begin{proof}
+    $H'$ ist als Dualraum automatisch vollständig. Auf $H'$ gilt die
+    Parallelogrammgleichung,
+    $\norm{a+b}^{2}+\norm{a-b}^{2}=2(\norm{a}^{2}+\norm{b}^{2})$ für $a,b\in
+    H'$. Denn für $a,b\in H'$ existieren nach dem Riezschen Darstellungssatz
+    $x,y\in H$ mit $a=C_{H}x$ und $b=C_{H}y$. Damit folgt mit der
+    Parallelogrammgleichung in $H$ un den Eigenschaften von $C_{H}$ die
+    Parallelogrammgleichung in $H'$:
+
+    $\norm{a+b}^{2}+\norm{a-b}^{2}=
+    \norm{C_{H}x+C_{H}y}^{2}+\norm{C_{H}x-C_{H}y}^{2}= \norm{C_{H}(x-y)}^{2}+
+    \norm{C_{H}(x-y)}^{2}= \norm{x+y}^{2}+ \norm{x-y}^{2}=^{H}
+    2(\norm{x}^{2}+\norm{y}^{2})=^{C_{H}} 2(\norm{C_{H}x}^{2}+
+    \norm{C_{H}y}^{2})= 2(\norm{a}^{2}+\norm{b}^{2})$
+
+    Damit ist gezeigt, dass $H'$ ein Hilbertraum ist. Wir zeigen nun, dass das
+    durch die Norm in $H'$ erzeugte Skalarprodukt durch den Ansatz $\langle
+    C_{H}x, C_{H}y\rangle_{H'} \coloneqq\langle y,x\rangle_{H}$
+    charakterisiert werden kann.
+
+    Eigenschaften des Skalarprodukts für $\langle\cdot,\cdot\rangle_{H'}$:
+    \begin{itemize}
+     \item $\langle C_{H}x,C_{H}x\rangle=\langle
+      x,x\rangle=\norm{x}^{2}=0\Leftrightarrow x=0\Leftrightarrow C_{H}x=0$.
+     \item $\langle C_{H}x,C_{H}y\rangle= \langle y,x\rangle=
+      \overline{\langle x,y\rangle}= \overline{\langle C_{H}y,C_{H}x\rangle}$
+     \item $\langle\alpha C_{H}x+\beta C_{H}y,C_{H}z\rangle= \langle
+      C_{H}(\overline{\alpha}x+\overline{\beta}y),C_{H}z\rangle= \langle
+      z,\overline{\alpha}x+\overline{\beta}y\rangle= \langle
+      z,\overline{\alpha}x\rangle+ \langle z,\overline{\beta}y\rangle=
+      \alpha\langle z,x\rangle+\beta\langle z,y\rangle= \alpha\langle
+      C_{H}x,C_{H}z\rangle+\beta\langle C_{H}y,C_{H}z\rangle$.
+    \end{itemize}
+    Mit $\norm{C_{H}x}_{H'}=\sqrt{\langle C_{H}x,C_{H}x\rangle_{H'}}$ wird auf
+    $H'$ eine Norm definiert, die mit der Norm auf $H'$ nach dem Riezschen
+    Darstellungssatz übereinstimmt.
+
+    $H$ ist reflexiv: Wir zeigen zunächst $K_{H}= C_{H'}\circ C_{H}$. Nach
+    Definition von $K_{H}$, $C_{H'}$ und $C_{H}$ folgt, $(K_{H}x)(C_{H}y)=
+    (C_{H}y)(x)= \langle x,y\rangle$ und $(C_{H'}(C_{H}x))(C_{H}y)= \langle
+    C_{H}y, C_{H}x\rangle= \langle x,y\rangle$. Damit ist $K_{H}=C_{H'}\circ
+    C_{H}$ gezeigt. Weil $C_{H'}\circ C_{H}$ surjektiv ist, ist $K_{H}$
+    surjektiv. Also ist $K_{H}$ reflexiv.
+  \end{proof}
+\end{satz}
+
+\section{Orthonormalsysteme und Orthonormalbasen}
+\begin{defini}
+  \begin{enumerate}[(i)]
+   \item Eine Teilmenge $A\subset H$ eines Prähilbertraumes heißt
+    \highl{Orthonormalsystem} genau dann, wenn $\forall e,f\in A\colon e\neq
+    f\Rightarrow\langle e,f\rangle=0$.
+   \item Ein Orthonormalsystem $B\subset H$ eines Hilbertraumes heißt
+    \highl{Orthonormalbasis} genau dann, wenn für beliebige Orthonormalsysteme
+    $A$ mit $B\subset A$ folgt, dass $A=B$. Eine Orthonormalbasis wird auch
+    oft \highl[vollständiges]{vollständiges Orthonormalsystem} genannt.
+  \end{enumerate}
+\end{defini}
+
+\begin{bsp}
+  \begin{enumerate}[(a)]
+   \item In $H=\ell_{2}$ ist die Menge $A=\Set{e_{n} | n\in\N}$ mit
+    $e_{n}=(0,\dotsc,0,1,0,\dotsc,0)$, $x=(\xi_{i}),
+    y=(\eta_{i})\in\ell_{2}\colon\langle x,y\rangle= \sum_{i=1}^{\infty}
+    \xi_{i}\overline{\eta_{i}}$. Es ist $\langle e_{k},e_{l}\rangle=0$ für
+    $k\neq l$ der Einheitsvektoren eine Orthonormalbasis.
+   \item Sei $H=L_{2}[0,2\pi]$ und
+    $A=\{\frac{1}{\sqrt{2}\pi}\}\cup\Set{\frac{1}{\sqrt{\pi}} \cos n |
+    n\in\N}\cup\Set{\frac{1}{\sqrt{\pi}} \sin n | n\in\N}$. Dann ist $A$ eine
+    Orthonormalbasis.
+   \item In $H=L_{2}[0,2\pi]$ (komplexer Hilbertraum) ist
+    $A=\Set{\frac{1}{\sqrt{2}\pi} e^{in(\cdot)} | n\in\Z}$.
+  \end{enumerate}
+\end{bsp}
+
+%satz v.3.1
+\begin{satz}[Gram"=Schmidt"=Verfahren]
+  Sei $\Set{x_{n} | n\in\N}\subset H$ eine linear unabhängige Teilmenge eines
+  Hilbertraumes $H$. Dann existiert ein Orthonormalsystem
+  $A=\{e_{1},e_{2},\dotsc\}\subset H$ mit $\spn\{e_{1},\dotsc, e_{n}\}=
+  \spn\{x_{1},\dotsc, x_{n}\}$ für alle $n\in\N$ und $\cl(\spn
+  A)=\cl(\spn\Set{x_{n} |n\in\N})$.
+  \begin{proof}
+    Setzen $e_{1}\coloneqq\frac{e_{1}}{\norm{e_{1}}}$. Betrachten
+    $f_{2}\coloneqq x_{2}-\langle x_{2},e_{1}\rangle e_{1}$ und
+    $e_{2}\coloneqq\frac{f_{2}}{\norm{f_{2}}}$. Es ist $f_{2}\neq0$, da
+    $\{x_{1}, x_{2}\}$ linear unabhängig. Dann ist $e_{1}\perp e_{2}$. Denn
+    $\langle f_{2},e_{1}\rangle= \langle x_{2},e_{1}\rangle- \langle x_{2},
+    e_{1}\rangle\langle e_{1},e_{1}\rangle=0$.
+
+    Durch eine Vorschrift $f_{k+1}\coloneqq x_{k+1}-\sum_{i=1}^{k} \langle
+    x_{k+1}, e_{i}\rangle e_{i}$ und
+    $e_{k+1}\coloneqq\frac{f_{k+1}}{\norm{f_{k+1}}}$ wird so eine Folge
+    definiert. Nach Konstruktion ist $A= \{e_{1}, e_{2},\dotsc\}$ ein
+    Orthonormalsystem mit $\spn\{e_{1},\dotsc, e_{n}\}= \spn\{x_{1},\dotsc,
+    x_{n}\}$ nach Induktion. Folglich ist $\cl(\spn(A))=
+    \cl(\spn\{x_{1},x_{2},\dotsc\})$.
+  \end{proof}
+\end{satz}
+
+\begin{bsp}
+  Wendet man das Gram"=Schmidt"=Verfahren auf $x_{n}=x_{n}(t)=t^{n}$ mit
+  $n\geq0$ in $L_{2}[-1,1]$ an,\footnote{Skalarprodukt: $\langle f,g\rangle=
+  \int_{-1}^{1} f(t)g(t)\,dt$} so erhält man $e_{n}= e_{n}(t)=
+  \sqrt{n+\frac{1}{2}} P_{n}(t)$, wobei $P_{n}(t)= \frac{1}{2^{n}n!}
+  \frac{d^{n}}{dt^{n}} ((t^{2}-1)^{n})$ die so genannten Legendre-Polynome
+  sind. Sie bilden eine Orthonormalbasis in $L_{2}[-1,1]$. Der Beweis dazu ist
+  etwas länglich.
+\end{bsp}
+
+% satz v.3.2
+\begin{satz}[Besselsche Ungleichung]
+  Sei $\Set{e_{n} | n\in\N}\subset H$ ein Orthonormalsystem eines
+  Hilbertraumes $H$ und $x\in H$. Dann gilt:
+  \begin{gather*}
+    \sum_{n=1}^{\infty} \abs{\langle x,e_{n}\rangle}\leq\norm{x}^{2}
+  \end{gather*}
+  \begin{proof}
+    Sei $N\in\N$ beliebig. Setze $x_{N}\coloneqq x-\sum_{n=1}^{N} \langle
+    x,e_{n}\rangle e_{n}$. Dann ist $x_{N}\perp e_{k}$ für $k=1,\dotsc,N$. Mit
+    dem Satz von Pythagoras folgt, $\norm{x}^{2}= \norm{x_{N}}^{2}+
+    \norm{\sum_{n=1}^{N} \langle x,e_{n}\rangle}^{2}= \norm{x_{N}}^{2}+
+    \sum_{n=1}^{N} \abs{\langle x,e_{n}\rangle}^{2}
+    \norm{e_{n}}^{2}\Rightarrow \sum_{n=1}^{N} \abs{\langle
+    x,e_{n}\rangle}^{2}\leq\norm{x}^{2}$. Da $N$ beliebig ist, folgt die
+    Behauptung.
+  \end{proof}
+\end{satz}
+
+\begin{folg}
+  Sei $\Set{e_{n} | n\in \N}\subset H$ ein Orthonormalsystem eines
+  Hilbertraumes. Dann gilt für alle $x,y\in H$: $\sum_{n=1}^{\infty}
+  \abs{\infty x,e_{n}\rangle} \abs{\langle e_{n},y\rangle}\leq\norm{x}\norm{y}$.
+  \begin{proof}
+    Mit der Cauchy"=Schwartzschen Ungleichung und der Besselschen Ungleichung
+    folgt: $\sum_{n=1}^{\infty} \abs{\langle x,e_{n}\rangle} \abs{\langle
+    e_{n},y\rangle}\leq\sqrt{(\sum_{n=1}^{\infty} \abs{\langle
+    x,e_{n}\rangle}^{2})} \sqrt{(\sum_{n=1}^{\infty} \abs{\langle
+    e_{n},y\rangle}^{2})}\leq \norm{x}\norm{y}$.
+  \end{proof}
+\end{folg}
+
+% lemma v.3.4
+\begin{lem}
+  Sei $A\subset H$ ein Orthonormalsystem eines Hilbertraumes $H$. Für $x\in H$
+  ist die Menge $A_{x}\coloneqq\Set{e\in A | \langle x,e\rangle\neq0}$
+  höchstens abzählbar.
+  \begin{proof}
+    Nach der Besselschen Ungleichung ist jede der Mengen
+    $A_{x,n}\coloneqq\Set{e\in A | \abs{\langle
+    x,e_{n}\rangle}\geq\frac{1}{n}}$ endlich. Denn wäre $\card
+    A_{x,n}=\infty$, so wählen wir eine abzählbare Teilmenge $B\subset
+    A_{x,n}$ mit $\card B=\infty$. Für $B$ gilt einerseits, $\sum_{e\in B}
+    \abs{\langle x,e\rangle}^{2}=\infty$. Andererseits ist nach der
+    Besselschen Ungleichung $\sum_{e\in B} \abs{\langle
+    x,e\rangle}^{2}\leq\norm{x}^{2}<\infty$\lightning{} Daher ist
+    $A_{x}=\bigcup_{n=1}^{\infty} A_{x,n}$ höchstens abzählbar.
+  \end{proof}
+\end{lem}
+
+Um auch im folgenden nichtseparable Hilberträume mit einzubeziehen, ist es
+notwendig, das Konzept der unbedingten Konvergenz einzuführen.
+
+\begin{defini}
+  Sei $X$ ein normierter Raum und $I$ eine Indexmenge. Sei $x_{i}\in X$ für
+  $i\in I$. Die Reihe $\sum_{i\in I} x_{i}$ konvergiert genau dann unbedingt
+  gegen $x\in X$, wenn
+  \begin{enumerate}[(i)]
+   \item $I_{0}\coloneqq\Set{i\in I | x_{i}\neq0}$ ist höchstens abzählbar.
+   \item Für jede Aufzählung $I_{0}=\{i_{1},i_{2},\dotsc\}$ gilt Gleichung
+    $\sum_{n=1}^{\infty} x_{i_{n}}=x$
+  \end{enumerate}
+\end{defini}
+
+\begin{bemerk}
+  Der Wert der Reihe $\sum_{n=1}^{\infty} x_{i_{n}}$ hängt also nicht von der
+  Reihenfolge der Summation der $x_{i}$ ab. Wir schreiben $\sum_{i\in I}
+  x_{i}=x$.
+
+  Selbst für $I=\N$ sind die Symbole $\sum_{n\in\N}$ und $\sum_{n=1}^{\infty}$
+  zu unterscheiden.
+\end{bemerk}
+
+
 
 \clearpage
 \appendix
