--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -4856,7 +4856,116 @@ notwendig, das Konzept der unbedingten Konvergenz einzuführen.
   zu unterscheiden.
 \end{bemerk}
 
+\todo{Fehlende Vorlesungen}
+%Vorlesung vom 11.6.2012
+% folg V.4.10
+\begin{folg}
+  Für einen normalen Operator $T\in\CL(H)$ gilt immer, $\norm{Tx}=
+  \norm{T^{*}x}$ für $x\in H$. Speziell: $N(T)= N(T^{*})$. Die Aussage folgt
+  mit dem Beweisschritt (iv) nach (i) in obigem Satz.
 
+  Oder man führt den Beweis direkt: $\norm{Tx}^{2}= \langle Tx,Tx\rangle=
+  \langle x,T^{*}Tx\rangle= \langle x,TT^{*}x\rangle= \langle T^{*}x,
+  T^{*}x\rangle=\norm{T^{*}x}^{2}$.
+\end{folg}
+
+\section{Selbstadjungierte und positive Operatoren}
+\begin{defini}[Positiver Operator]
+  Ein Operator $T\in\CL(H)$ heißt genau dann \highl{positiv}, wenn $\langle
+  Tx,x\rangle=0$ für alle $x\in H$. Wir schreiben $T\geq0$. Für Operatoren
+  $S,T\in\CL(H)$ schreiben wir $S\leq T$, wenn $S-T\geq0$. Im Fall komplexer
+  Hilberträume folgt aus der Positivität automatisch, dass der Operator
+  selbstadjungiert ist. Für reelle Hilberträume folgt aus der Positivität von
+  $T$ im Allgemeinen nicht die Selbstadjungiertheit.
+\end{defini}
+
+\begin{bsp}
+  Ein weiteres Beispiel ist:
+  \begin{gather*}
+    T=
+       \begin{pmatrix}
+	 1 & -2\\
+	 0& 1
+       \end{pmatrix}\colon\ell_{2}^{2}(\R)\rightarrow\ell_{2}^{2}(\R)\qquad\ell_{2}^{2}(\R)\coloneqq[\R^{2},
+       \norm{\cdot}_{2}]
+  \end{gather*}
+  Für $x=\begin{pmatrix}\xi_{1}\\
+	   \xi_{2}\end{pmatrix}$:
+  \begin{gather*}
+    \langle Tx,x\rangle= \langle
+       \begin{pmatrix}
+	 \xi_{1}-2\xi_{2}\\
+	 \xi_{2}
+       \end{pmatrix},
+       \begin{pmatrix}
+	 \xi_{1}\\
+	 \xi_{2}
+       \end{pmatrix}\rangle=
+       \xi_{1}^{2}-2\xi_{1}\xi_{2}+\xi_{2}^{2}=(\xi_{1}-\xi_{2})^{2}\geq0
+  \end{gather*}
+\end{bsp}
+
+%satz v.4.11
+\begin{satz}
+  \begin{enumerate}
+   \item Seien $S,T\in\CL(H)$ positive, selbstadjungierte und vertauschbare
+    Operatoren. Dann ist $TS$ ein selbstadjungierter positiver Operator.
+   \item Sei $(S_{n})\subseteq\CL(H)$ eine Folge von selbstadjungierten und
+    vertauschbaren Operatoren. Ist $T\in\CL(H)$ ein selbstadjungierter
+    Operator mit $S_{n}T=TS_{n}$ für alle $n\in\N$ und $S_{1}\leq
+    S_{2}\leq\dotsb\leq S_{n}\leq\dotsb\leq T$. Dann konvergieren die $S_{n}$ punktweise gegen
+    einen selbstadjungierten Operator $S$ und es gilt, $S\leq T$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}
+     \item $S\neq0$ und $S_{1}\coloneqq\frac{S}{\norm{S}}$, $S_{2}\coloneqq
+      S_{1}-S_{1}^{2},\dotsc, S_{n+1}\coloneqq S_{n}-S_{n}^{2}$. Die $S_{n}$
+      sind vertauschbar und selbstadjungiert. Es gilt, $0\leq S_{n}\leq I$ für
+      alle $n\in\N$. Wir führen den Nachweis per Induktion.
+
+      Für $n=1$ ist $0\leq S_{1}\leq I$, denn $\langle S_{1}x,x\rangle=
+      \frac{1}{\norm{S}}\langle Sx,x\rangle\geq0\Rightarrow S_{1}\geq0$ und
+      $\langle (I-S_{1})x,x\rangle= \langle x,x\rangle-\langle S_{1}x,x\rangle
+      \geq\norm{x}^{2}
+      -\norm{S_{1}x}\norm{x}\geq\norm{x}^{2}-\norm{S_{1}}\norm{x}^{2}=
+      \norm{x}^{2}-\norm{x}^{2}=0$. Also ist $I-S_{1}\geq0$, d.\,h. $S_{1}\leq
+      I$.
+
+      Nun folgt der Induktionsschritt und wir nehmen an, die Aussage sei für
+      $n$ richtig. Es gilt, $\langle S_{n}^{2}(I-S_{n})x,x\rangle= \langle
+      (I-S_{n})S_{n}x,S_{n}x\rangle\geq0$. Also ist $S_{n}^{2}(I-S_{n})\geq0$.
+      Analog haben wir $\langle S_{n}(I-S_{n})^{2}x,x\rangle=
+      \langle(I-S_{n})S_{n}(I-S_{n})x,x\rangle= \langle S_{n}(I-S_{n})x,
+      (I-S_{n})x\rangle\geq0$. Also ist $S_{n}(I-S_{n})^{2}\geq0$. Daher ist
+      $S_{n+1}= S_{n}(I-S_{n})= S_{n}^{2}(I-S_{n})+ S_{n}(I-S_{n})^{2}\geq0$
+      und $I-S_{n+1}= (I-S_{n})^{2}+S_{n}\geq0$. Also $0\leq S_{n+1}\leq I$.
+
+      Ferner gilt, $S_{1}= S_{1}^{2}+S_{2}= S_{1}+S_{2}^{2}+S_{3}=\dotsb=
+      S_{1}^{2}+S_{2}^{2}+\dotsb+
+      S_{n}^{2}+S_{n+1}\Rightarrow\sum_{k=1}^{n}S_{k}^{2}= S_{1}-S_{n+1}\leq
+      S_{1}$, denn $S_{n+1}\geq0$. Damit folgt, $\sum_{k=1}^{n}
+      \norm{S_{k}x}^{2}= \sum_{k=1}^{n} \langle S_{k}x, S_{k}x\rangle0
+      \sum_{k=1}^{n} \langle S_{k}^{2}x,x\rangle\leq \langle
+      S_{1}x,x\rangle<\infty\Rightarrow \sum_{k=1}^{\infty}
+      \norm{S_{k}x}^{2}\leq \langle
+      S_{1}x,x\rangle<\infty\Rightarrow\lim\norm{S_{k} x}=0\Rightarrow \lim_{n\rightarrow\infty}
+      S_{n}x=0$. Somit folgt, $\lim\sum_{k=1}^{n} S_{k}^{2}x=
+      \lim(S_{1}-S_{n+1})x= S_{1}x-\lim S_{n+1}x=S_{1}x$. Also folgt,
+      $\sum_{k=1}^{\infty} S_{k}^{2}x= S_{1}x$ für alle $x\in H$.
+
+      Wegen $TS=ST$ folgt, $TS_{n}=S_{n}T$ für alle $n$ und folglich $\langle
+      TSx,x\rangle=\norm{S_{1}}\langle TS_{1}x,x\rangle= \norm{S}\langle
+      T\lim_{n\rightarrow\infty}\sum_{k=1}^{n} S_{k}^{2}x,x\rangle=
+      \norm{S}\langle\lim\sum_{k=1}^{n} TS_{k}^{2}x,x\rangle=
+      \norm{S}\lim\langle\sum_{k=1}^{n} TS_{k}^{2}x,x\rangle=
+      \norm{S}\lim\sum_{k=1}^{n} \langle TS_{k}^{2}x,x\rangle=
+      \norm{S}\lim\sum_{k=1}^{n}\langle TS_{k}x,S_{k}x\rangle\geq 0$. Damit
+      folgt, $\langle TSx,x\rangle\geq0$ und $TS$ ist positiv.
+
+      $TS$ ist selbstadjungiert: $(TS)^{*}=S^{*}T^{*}= ST=TS$.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
 
 \clearpage
 \appendix
