Name und E-Mail-Adresse ergänzt

--- a/schumacher-statver/skript.ltx
+++ b/schumacher-statver/skript.ltx
@@ -243,7 +243,8 @@
   Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
   haben, vielmals danken:
   \begin{itemize}
-   \item \href{mailto:email}{Person \nolinkurl{<email>}} (Jahr)
+   \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel
+    \nolinkurl{<jens@kubieziel.de>}} (2012/3)
   \end{itemize}
 }
 
