Verteilungen als Tabelle formatiert

--- a/schumacher-statver/skript.ltx
+++ b/schumacher-statver/skript.ltx
@@ -714,23 +714,26 @@ lineare Modelle}.
 Das Ziel ist es, eine flexible Klasse von Wahrscheinlichkeitsverteilungen zu
 haben. Diese sollen einheitlich theoretisch behandelt werden.
 
-Welche Verteilungen sind bekannt?
-\begin{itemize}
- \item Normalverteilung $N(\mu,\sigma^{2})$
- \item Poissonverteilung$\text{Poisson}(\mu)$ X
- \item Gleichverteilung auf $[0,\theta]$
- \item diskrete Verteilung auf $\{0,\dotsc,k\}$ X
- \item Binomialverteilung $\text{Bin}(n,p)$ X
- \item Exponentialverteilung $\text{Exp}(\lambda)$
- \item geometrische Verteilung $\text{geom}(p)$ X
- \item hypergeometrische Verteilung $\text{hypergeom}(N,M,n)$ X
- \item $\chi^{2}$"~Verteilung $\chi^{2}(n)$
- \item Gammaverteilung
- \item Student"=Verteilung ($t$"~Verteilung)
- \item logistische Verteilung
- \item Fishersche $F$"~Verteilung
-\end{itemize}
-
+\begin{table}[htb]
+  \centering
+  \begin{tabular}{l|l}
+    Normalverteilung $N(\mu,\sigma^{2})$ &
+    Poissonverteilung$\text{Poisson}(\mu)$\\
+    Gleichverteilung auf $[0,\theta]$ &  diskrete Verteilung auf
+    $\{0,\dotsc,k\}$\\
+    Exponentialverteilung $\text{Exp}(\lambda)$ &  Binomialverteilung
+    $\text{Bin}(n,p)$\\
+    $\chi^{2}$"~Verteilung $\chi^{2}(n)$ &  geometrische Verteilung
+    $\text{geom}(p)$\\
+    Gammaverteilung & hypergeometrische Verteilung
+    $\text{hypergeo}(N,M,n)$\\
+    Student"=Verteilung ($t$"~Verteilung)\\
+    logistische Verteilung\\
+    Fishersche $F$"~Verteilung
+  \end{tabular}
+  \caption{Verschiedene Verteilungen}
+  \label{tab:verteilungen}
+\end{table}
 
 \begin{defini}[Natürliche oder lineare Exponentialfamilie]
   Eine Zufallsgröße~$Y$ besitzt eine Verteilung aus einer
