Lösungen aus Bsp. 3.1 übertragen

--- a/schumacher-statver/skript.ltx
+++ b/schumacher-statver/skript.ltx
@@ -780,7 +780,7 @@ Y_{n}$:
   &= c^{*}(\underline{y}) e^{\underline{\theta}^{T}\underline{y}-A^{*}(\underline{\theta})}
 \end{align*}
 
-\begin{bsp}[Poissonverteilung]
+\begin{bsp}[Poissonverteilung]\label{bsp:3.1}
   Die Poissonverteilung hat die Wahrscheinlichkeitsfunktion $f_{Y}(y)=
   \frac{\mu^{y}}{y!} e^{-\mu}= \frac{1}{y!}e^{y\log\mu-\mu}$ mit
   $y=0,1,2,\dotsc$. Dabei ist $\log\mu=\theta$ der natürliche Parameter und
@@ -1007,8 +1007,8 @@ ist $f_{Z}(z)= c(z,\phi)e^{\frac{\theta z-A(\theta)}{\phi}}$.
 \begin{tabular}{l|l}
   Notation &  $\text{Poisson}(\mu)$\\
   Dichtefunktion & $\frac{\mu^{y}}{y!} e^{-\mu}$\\
-  natürlicher Parameter $\theta$& \\
-  $A(\theta)$& \\
+  natürlicher Parameter $\theta$& $\log\mu$ (siehe \autoref{bsp:3.1})\\
+  $A(\theta)$& $e^{\theta}=\mu$ (siehe \autoref{bsp:3.1})\\
   Erwartungswert $\mu=\tau(\theta)$& \\
   Kanonische Linkfunktion $\tau^{-1}(\mu)$& \\
   Dispersionsparamter $\phi$& \\
