--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -2,7 +2,8 @@
 ** Planung
 ** Inhaltsverzeichnis
 *** Einführung und Übersicht
-    - Definition Hadamard
+    - Definition Hadamard-Matrix
+      + reguläre HM (konstante Zahl +1 über alle Zeilen und Spalten)
     - Beispiele
     - Definition Kronecker-Produkt
     - Blockplan
