--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -45,6 +45,7 @@
     - [[http://projecteuclid.org/DPubS?service%3DUI&version%3D1.0&verb%3DDisplay&handle%3Deuclid.dmj/1077472371][Hadamard’s determinant theorem and the sum of four squares (Williamson)]]
     - [[http://www.ams.org/journals/bull/1947-53-06/S0002-9904-1947-08853-4/][Note on Hadamard's determinant theorem (Williamson)]]
     - [[http://www.sciencedirect.com/science/article/pii/0097316576900625#][On the existence of Hadamard matrices (Wallis)]]
+    - [[http://www.sciencedirect.com/science/article/pii/0022314X76900172][Hadamard matrices of order 4(2p + 1) (Whiteman]]
 
 *** Webseiten
 **** Wikipedia
