HM Ordnung 4(2p+1): Zitat

--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -26,3 +26,17 @@ url = "http://www.sciencedirect.com/science/article/pii/0097316576900625",
 author = "Jennifer Seberry Wallis"
 }
 
+@article{Whiteman19761,
+title = "Hadamard matrices of order 4(2p + 1) ",
+journal = "Journal of Number Theory ",
+volume = "8",
+number = "1",
+pages = "1 - 11",
+year = "1976",
+note = "",
+issn = "0022-314X",
+doi = "http://dx.doi.org/10.1016/0022-314X(76)90017-2",
+url = "http://www.sciencedirect.com/science/article/pii/0022314X76900172",
+author = "Albert Leon Whiteman"
+}
+
