--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -48,6 +48,7 @@
     - [[http://www.ams.org/journals/bull/1947-53-06/S0002-9904-1947-08853-4/][Note on Hadamard's determinant theorem (Williamson)]]
     - [[http://www.sciencedirect.com/science/article/pii/0097316576900625#][On the existence of Hadamard matrices (Wallis)]]
     - [[http://www.sciencedirect.com/science/article/pii/0022314X76900172][Hadamard matrices of order 4(2p + 1) (Whiteman]]
+    - [[http://www.sciencedirect.com/science/article/pii/S0021980069801286][A note of a class of Hadamard matrices (Wallis)]]
 
 *** Webseiten
 **** Wikipedia
