--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -27,6 +27,7 @@
 *** Bücher
     - [[http://books.google.de/books?id=IS4DDYrSmZoC&lpg=PP1&dq=hall%20combinatorial%20theory&hl=de&pg=PP1#v=onepage&q=hall%20combinatorial%20theory&f=false][Marshall Hall: Combinatorial Theory]]
     - [[http://books.google.de/books?id=HcyzopHFmw8C&lpg=PR1&hl=de&pg=PR9#v=onepage&q&f=false][Jacobs, Jungnickel: Einführung in die Kombinatorik]]
+    - [[http://books.google.de/books?id=cv5N0JgGpd8C&printsec=frontcover&dq=hadamard+matrices+and+their+applications&hl=de&sa=X&ei=qNBfUuKTMIWptAaghICYDA&ved=0CEUQ6AEwAQ#v=onepage&q=hadamard%20matrices%20and%20their%20applications&f=false][Horadam: Hadamard matrices and their applications]]
     
 *** Papers
     - [[http://link.springer.com/article/10.1007/BF01864168][On a series of Hadamard matrices of order 2 t and the maximal excess of Hadamard matrices of order 22 (Yamada)]]
