--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -16,6 +16,7 @@
       + [[http://library.wolfram.com/infocenter/MathSource/499][Paket für Matlab]]
     - Tonchev
     - Williamson
+    - Goethals-Seidel als Verallgemeinerung von Williamson
     - Karl Goldberg
     - L. Baumert
       + [[http://www.ams.org/journals/bull/1965-71-01/S0002-9904-1965-11273-3/][A new construction for Hadamard matrices (Baumert, Hall]]
