--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -17,6 +17,7 @@
     - Tonchev
     - Williamson
     - Goethals-Seidel als Verallgemeinerung von Williamson
+    - Cooper-Wallis als Kombination von Williamson and T-Sequenz
     - Karl Goldberg
     - L. Baumert
       + [[http://www.ams.org/journals/bull/1965-71-01/S0002-9904-1965-11273-3/][A new construction for Hadamard matrices (Baumert, Hall]]
