--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -21,7 +21,7 @@
     - Goethals-Seidel als Verallgemeinerung von Williamson
     - Karl Goldberg
     - L. Baumert
-      + [[http://www.ams.org/journals/bull/1965-71-01/S0002-9904-1965-11273-3/][A new construction for Hadamard matrices (Baumert, Hall]]
+      + [[http://www.ams.org/journals/bull/1965-71-01/S0002-9904-1965-11273-3/][A new construction for Hadamard matrices (Baumert, Hall)]]
       + [[http://dx.doi.org/10.1090/S0002-9904-1965-11273-3 ][DOI]]
     - H. Ehlich
     - etc.
