--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -62,6 +62,8 @@
     - [[http://www.sciencedirect.com/science/article/pii/0022314X76900172][Hadamard matrices of order 4(2p + 1) (Whiteman]]
     - [[http://www.sciencedirect.com/science/article/pii/S0021980069801286][A note of a class of Hadamard matrices (Wallis)]]
     - [[http://link.springer.com/article/10.1007%2FBF01212983][Two Hadamard matrices of order 956 of Goethals-Seidel type (Đoković)]]
+    - [[http://works.bepress.com/jseberry/308/][Orthogonal designs (Geramita, Wallis)]]
+
 
 *** Webseiten
 **** Wikipedia
